# misfortune

./: .travis.yml  README.fortune-mod.md  README.lambdabot.md  README.md  TODO  misfortune.cabal
cruft/: Bash.hs  StrFile.hs  split.hs
data/lambdabot/: brain  keal  notoriousV  pinky  pinky-pondering  protontorpedo  stewie
data/normal/: bash  bash.ix
data/normal/fortune-mod/: art.ix  ascii-art.ix  computers.ix  cookie.ix  education.ix  ethnic.ix  fortunes.ix  goedel.ix  humorists.ix  kids.ix  law.ix  literature.ix  love.ix  magic.ix  men-women.ix  news.ix  platitudes.ix  riddles.ix  science.ix  songs-poems.ix  sports.ix  translate-me.ix  work.ix
data/normal/lambdabot/: arr  arr.ix  b52s  brain.ix  farber  farber.ix  ghc  girl19  keal.ix  notoriousV.ix  palomer  palomer.ix  pinky  pinky-pondering.ix  pinky.ix  stewie.ix
data/off/lambdabot/: nixon
data/offensive/: bash
data/offensive/fortune-mod/: astrology.ix  definitions.ix  drugs.ix  hphobia.ix  limerick.ix  misogyny.ix  privates.ix  racism.ix  riddles.ix  sex.ix  songs-poems.ix
data/offensive/lambdabot/: yarr
src/: Fortune.hs  StrFile.hs
src/Data/: Fortune.hs
src/Data/Fortune/: FortuneFile.hs  Index.hs  Stats.hs
