name:                   misfortune
version:                0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               fortune-mod clone
description:            fortune-mod clone, in library and executable form.

data-dir:               data
data-files:             lambdabot/*.dat
                        lambdabot/arr
                        lambdabot/b52s
                        lambdabot/brain
                        lambdabot/farber
                        lambdabot/girl19
                        lambdabot/keal
                        lambdabot/notoriousV
                        lambdabot/palomer
                        lambdabot/pinky
                        lambdabot/pinky-pondering
                        lambdabot/protontorpedo
                        lambdabot/stewie
                        off/lambdabot/*.dat
                        off/lambdabot/nixon
                        off/lambdabot/yarr
                        fortune-mod/*.dat
                        fortune-mod/art
                        fortune-mod/ascii-art
                        fortune-mod/computers
                        fortune-mod/cookie
                        fortune-mod/definitions
                        fortune-mod/drugs
                        fortune-mod/education
                        fortune-mod/ethnic
                        fortune-mod/food
                        fortune-mod/fortunes
                        fortune-mod/goedel
                        fortune-mod/humorists
                        fortune-mod/kids
                        fortune-mod/law
                        fortune-mod/linuxcookie
                        fortune-mod/literature
                        fortune-mod/love
                        fortune-mod/magic
                        fortune-mod/medicine
                        fortune-mod/men-women
                        fortune-mod/miscellaneous
                        fortune-mod/news
                        fortune-mod/people
                        fortune-mod/pets
                        fortune-mod/platitudes
                        fortune-mod/politics
                        fortune-mod/riddles
                        fortune-mod/science
                        fortune-mod/songs-poems
                        fortune-mod/sports
                        fortune-mod/startrek
                        fortune-mod/translate-me
                        fortune-mod/wisdom
                        fortune-mod/work
                        fortune-mod/zippy
                        off/fortune-mod/*.dat
                        off/fortune-mod/astrology
                        off/fortune-mod/black-humor
                        off/fortune-mod/definitions
                        off/fortune-mod/drugs
                        off/fortune-mod/ethnic
                        off/fortune-mod/hphobia
                        off/fortune-mod/limerick
                        off/fortune-mod/misandry
                        off/fortune-mod/miscellaneous
                        off/fortune-mod/misogyny
                        off/fortune-mod/politics
                        off/fortune-mod/privates
                        off/fortune-mod/racism
                        off/fortune-mod/religion
                        off/fortune-mod/riddles
                        off/fortune-mod/sex
                        off/fortune-mod/songs-poems
                        off/fortune-mod/vulgarity
                        
                        

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Fortune
  other-modules:        Data.Fortune.FortuneFile
                        Data.Fortune.Index
                        Data.Fortune.Stats
                        Paths_misfortune
  build-depends:        base >= 3 && < 5,
                        bytestring,
                        cereal,
                        directory,
                        filepath,
                        random,
                        text,
                        utf8-string,
                        vector

Executable misfortune-strfile
  hs-source-dirs:       src
  main-is:              StrFile.hs

Executable misfortune
  hs-source-dirs:       src
  main-is:              Fortune.hs
  build-depends:        random-fu
