name:                   misfortune
version:                0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               fortune-mod clone
description:            fortune-mod clone, in library and executable form.

data-dir:               data
data-files:             normal/*.dat
                        normal/bash
                        normal/lambdabot/*.dat
                        normal/lambdabot/arr
                        normal/lambdabot/b52s
                        normal/lambdabot/brain
                        normal/lambdabot/farber
                        normal/lambdabot/ghc
                        normal/lambdabot/girl19
                        normal/lambdabot/keal
                        normal/lambdabot/notoriousV
                        normal/lambdabot/palomer
                        normal/lambdabot/pinky
                        normal/lambdabot/pinky-pondering
                        normal/lambdabot/protontorpedo
                        normal/lambdabot/stewie
                        normal/*.dat
                        offensive/*.dat
                        offensive/bash
                        offensive/lambdabot/*.dat
                        offensive/lambdabot/nixon
                        offensive/lambdabot/yarr
                        normal/fortune-mod/*.dat
                        normal/fortune-mod/art
                        normal/fortune-mod/ascii-art
                        normal/fortune-mod/computers
                        normal/fortune-mod/cookie
                        normal/fortune-mod/definitions
                        normal/fortune-mod/drugs
                        normal/fortune-mod/education
                        normal/fortune-mod/ethnic
                        normal/fortune-mod/food
                        normal/fortune-mod/fortunes
                        normal/fortune-mod/goedel
                        normal/fortune-mod/humorists
                        normal/fortune-mod/kids
                        normal/fortune-mod/law
                        normal/fortune-mod/linuxcookie
                        normal/fortune-mod/literature
                        normal/fortune-mod/love
                        normal/fortune-mod/magic
                        normal/fortune-mod/medicine
                        normal/fortune-mod/men-women
                        normal/fortune-mod/miscellaneous
                        normal/fortune-mod/news
                        normal/fortune-mod/people
                        normal/fortune-mod/pets
                        normal/fortune-mod/platitudes
                        normal/fortune-mod/politics
                        normal/fortune-mod/riddles
                        normal/fortune-mod/science
                        normal/fortune-mod/songs-poems
                        normal/fortune-mod/sports
                        normal/fortune-mod/startrek
                        normal/fortune-mod/translate-me
                        normal/fortune-mod/wisdom
                        normal/fortune-mod/work
                        normal/fortune-mod/zippy
                        offensive/fortune-mod/*.dat
                        offensive/fortune-mod/astrology
                        offensive/fortune-mod/black-humor
                        offensive/fortune-mod/definitions
                        offensive/fortune-mod/drugs
                        offensive/fortune-mod/ethnic
                        offensive/fortune-mod/hphobia
                        offensive/fortune-mod/limerick
                        offensive/fortune-mod/misandry
                        offensive/fortune-mod/miscellaneous
                        offensive/fortune-mod/misogyny
                        offensive/fortune-mod/politics
                        offensive/fortune-mod/privates
                        offensive/fortune-mod/racism
                        offensive/fortune-mod/religion
                        offensive/fortune-mod/riddles
                        offensive/fortune-mod/sex
                        offensive/fortune-mod/songs-poems
                        offensive/fortune-mod/vulgarity

Library
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-binds -fwarn-unused-imports
  exposed-modules:      Data.Fortune
  other-modules:        Data.Fortune.FortuneFile
                        Data.Fortune.Index
                        Data.Fortune.Stats
                        Paths_misfortune
  build-depends:        base >= 3 && < 5,
                        bytestring,
                        cereal,
                        directory,
                        filepath,
                        random-fu >= 0.2.2,
                        semigroups,
                        text,
                        utf8-string,
                        vector

Executable misfortune-strfile
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-binds -fwarn-unused-imports
  main-is:              StrFile.hs
  build-depends:        monad-loops,
                        regex-base,
                        regex-pcre

Executable misfortune
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-binds -fwarn-unused-imports
  main-is:              Fortune.hs
